# spgrep-modulation

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  api.html  api_irreps.html  api_isotropy.html  api_modulation.html  band_connectivity.html  changelog.html  examples.html  formulation.html  genindex.html  group_velocity.html  index.html  isotropy_subgroup.html  notes.html  objects.inv  phonon.html  pyproject.toml  search.html  searchindex.js  setup.py  supercell.html
.doctrees/: api_isotropy.doctree  environment.pickle  formulation.doctree  index.doctree  notes.doctree  phonon.doctree
.doctrees/examples/: band_connectivity.doctree
.doctrees/nbsphinx/examples/: visualize.ipynb
.github/workflows/: deploy.yml  testing.yml
_modules/: index.html
_modules/spgrep_modulation/: irreps.html  isotropy.html  modulation.html
_sources/: api_irreps.md.txt  changelog.md.txt  formulation.md.txt  notes.md.txt  supercell.md.txt
_sources/examples/: visualize.ipynb.txt
_static/: documentation_options.js
develop/: .buildinfo  api.html  api_irreps.html  api_isotropy.html  api_modulation.html  band_connectivity.html  changelog.html  examples.html  formulation.html  genindex.html  group_velocity.html  index.html  isotropy_subgroup.html  notes.html  objects.inv  phonon.html  prf-prf.html  search.html  searchindex.js  supercell.html
develop/.doctrees/: api.doctree  api_irreps.doctree  api_isotropy.doctree  api_modulation.doctree  band_connectivity.doctree  changelog.doctree  environment.pickle  examples.doctree  formulation.doctree  group_velocity.doctree  index.doctree  isotropy_subgroup.doctree  notes.doctree  phonon.doctree  supercell.doctree
develop/.doctrees/examples/: band_connectivity.doctree  visualize.doctree
develop/_modules/: index.html
develop/_modules/spgrep_modulation/: irreps.html  isotropy.html  modulation.html
develop/_sources/: api.md.txt  api_modulation.md.txt  band_connectivity.md.txt  examples.md.txt  group_velocity.md.txt  index.md.txt  isotropy_subgroup.md.txt  phonon.md.txt
develop/_sources/examples/: band_connectivity.ipynb.txt
develop/_static/: documentation_options.js
develop/examples/: band_connectivity.html  band_connectivity.ipynb  visualize.html
docs/: api.md  api_irreps.md  api_isotropy.md  api_modulation.md  changelog.md  conf.py  group_velocity.md  index.md  isotropy_subgroup.md  phonon.md  references.bib  supercell.md
docs/examples/: band_connectivity.ipynb
examples/: band_connectivity.html  band_connectivity.ipynb  basic.py  compatibility.py  search.py  visualize.html  visualize.ipynb
src/spgrep_modulation/: __init__.py  irreps.py  isotropy.py  modulation.py  utils.py  visualize.py
tests/: conftest.py  phonopy_64_R_to_12.yaml  phonopy_mp-1265.yaml.xz  phonopy_mp-149.yaml.xz  phonopy_mp-661.yaml.xz  test_irreps.py  test_isotropy.py  test_modulation.py  test_utils.py  test_version.py
